# fastapi-tdd-docker

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.original  Dockerfile.prod  Dockerfile.test  README.md  docker-compose.yml  pyproject.dev.toml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
app/: config.py  main.py
tests/: test_summaries.py
