[tool.poetry]
name = "fastapi-tdd-docker"
version = "0.1.0"
description = ""
authors = ["alexander <barmin1@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.65.3"
uvicorn = "0.14.0"
asyncpg = "0.23.0"
tortoise-orm = "0.17.4"
aerich = "0.5.3"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
