[tool.poetry]
name = "fastapi-tdd-docker"
version = "0.1.0"
description = ""
authors = ["alexander <barmin1@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.65.3"
uvicorn = "0.14.0"
asyncpg = "0.23.0"
tortoise-orm = "0.17.4"
aerich = "0.5.3"
python-dotenv = "^0.19.0"
gunicorn = "20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "2.12.1"
flake8 = "3.9.2"
black = "21.6b0"
isort = "5.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
